@startuml
left to right direction

abstract class Vehicle {
  - brand: String
  - model: String
}

class Truck {
  - maxPayload: int
  + Truck(String model, String brand, int maxPayload)
  + toString(): String
}

class PassengerCar {
  - maxPassengers: int
  + PassengerCar(String brand, String model, int maxPassengers)
    + toString(): String
}

Vehicle <|-- Truck
Vehicle <|-- PassengerCar

@enduml